--- a/Brownie Site/brownies.html
+++ b/Brownie Site/brownies.html
@@ -34,6 +34,8 @@
  	</ul>
    </section>
  
+<section class="sideelements">
+
    <section id="preptime">
  	<h2>Prep Time</h2>
  	<span>60 mins</span>
@@ -48,6 +50,8 @@
 	<h4>Nutritional Info</h4> 
 	<span>340 cals</span>
   </section>
+
+</section>
 
    <section id="ingredients">
  	<h2>Ingredients</h2>
