--- a/Brownie Site/brownies.html
+++ b/Brownie Site/brownies.html
@@ -11,8 +11,10 @@
 
  <body id="top">
    <header>
- 	<h1>Deep Dish Brownies &#9773; <!-- Use this thingy for specific special charaters. Name of thingy = "Encoded Character" --></h1>
- 
+	<div id="navbar">
+ 		<h1>Deep Dish Brownies &#9773; <!-- Use this thingy for specific special charaters. Name of thingy = "Encoded Character" --></h1>
+	</div>
+
  	<img
   	class = "Brownies"
   	src = "https://www.hersheyland.com/content/dam/hersheyland/en-us/recipes/recipe-images/60_Hersheys_Chocolate-OneBowl-Brownies-_11-18.jpeg"
@@ -23,34 +25,40 @@
    </header>
  
 
- 	<section id="related">
- 		<h2>Related Recipes</h2>
- 	<ul>  
- 		<li><a href="#">Chewiest Brownies</a></li>
- 		<li><a href="#">Tell They're Low-fat Brownies</a></li>
- 		<li><a href="#">Brownies</a></li>
- 		<li><a href="#">Katrina's Best-Ever Chocolate Brownies</a></li>
- 		<li><a href="#">Easy Fudge Brownies</a></li>
- 	</ul>
-   </section>
  
 <section class="sideelements">
 
-   <section id="preptime">
+   <div id="preptime">
  	<h2>Prep Time</h2>
  	<span>60 mins</span>
-  </section>
+   </div>
 
-   <section id="servings">
+   <div id="servings">
  	<h2>Servings</h2>
  	<span>9</span>
-  </section>
+   </div>
 
-  <section id="nutritional">
+  <div id="nutritional">
 	<h4>Nutritional Info</h4> 
 	<span>340 cals</span>
-  </section>
+  </div>
 
+</section>
+
+  <div id="tip">
+	<h3>Tip</h3>
+	<p>Aluminum foil can be used to keep food moist, cook it evenly, and make clean-up easier.</p>
+  </div>
+
+<section id="related">
+	<h2>Related Recipes</h2>
+<ul>  
+	<li><a href="#">Chewiest Brownies</a></li>
+	<li><a href="#">Tell They're Low-fat Brownies</a></li>
+	<li><a href="#">Brownies</a></li>
+	<li><a href="#">Katrina's Best-Ever Chocolate Brownies</a></li>
+	<li><a href="#">Easy Fudge Brownies</a></li>
+</ul>
 </section>
 
    <section id="ingredients">
@@ -79,13 +87,12 @@
  		<li>Let brownies cool, then cut into squares. Enjoy!</li>
  	</ol>
   </section>
- 
- 	<h3>Tip</h3>
- 	<p>Aluminum foil can be used to keep food moist, cook it evenly, and make clean-up easier.</p>
+
+
 
   <footer>
    <div>
- 	<a href="http://allrecipes.com/recipe/11063/deep-dish-brownies">Find this recipe here!</a>
+ 	<a href="http://allrecipes.com/recipe/11063/deep-dish-brownies" target="_blank" rel="noreferrer noopener">Find this recipe here!</a>
   </div> 
   <div>
 	<a href="mailto:boggsc716@gmail.com?subject=Brownie%20Recipe&body=I20%Really20%Enjoyed20%Your20%Recipe">Email Me Here!</a>
